@@ -1,3 +1,7 @@
+2006-04-01 Tim Perdue   <tim@gforgegroup.com>
+
+	* purging unused strings and unmaintained language files 
+
 2006-03-27 Daniel Perez <daniel@gforgegroup.com>
 	* Fixed bug : Capital letters with "stress marks" are wrong in language/Spanish.tab
 		http://gforge.org/tracker/?func=detail&aid=2099&group_id=1&atid=105
